# ifyoulike

./: .env.template  .gitignore  README.md  pyproject.toml
src/: example_usage.py  llm_linker.py  main.py  parse.py  playlist_generator.py  search_executor.py  search_tools.py  search_tools_spotify.py  spotify_resolver.py
src/ifyoulike_playlist_generator/: cli.py
src/musicBrainz/: client.py  example_usage.py  search_tools.py
